--- a/corecd/sabayon-artwork-corecd/gensplash/sabayon/1024x768.cfg
+++ b/corecd/sabayon-artwork-corecd/gensplash/sabayon/1024x768.cfg
@@ -18,14 +18,14 @@ text_y=700
 text_size=14
 text_color=0x666666
 
-pic=/etc/splash/sabayon/images/verbose-1024x768.png
-silentpic=/etc/splash/sabayon/images/silent-1024x768.png
+pic=/etc/splash/sabayon/images/verbose-1024x768.jpg
+silentpic=/etc/splash/sabayon/images/silent-1024x768.jpg
 
 
 # progress bar
 box silent noover          1  728 1023  733 #000000
-box silent inter           1  729    1  732 #00b0ff
-box silent                 1  729 1023  732 #00b0ff
+box silent inter           1  729    1  732 #770000
+box silent                 1  729 1023  732 #770000
 
 
 # border of the progress bar
