--- a/corecd/sabayon-artwork-corecd/gensplash/sabayon/1280x1024.cfg
+++ b/corecd/sabayon-artwork-corecd/gensplash/sabayon/1280x1024.cfg
@@ -20,14 +20,14 @@ text_color=0x666666
 
 
 
-pic=/etc/splash/sabayon/images/verbose-1280x1024.png
-silentpic=/etc/splash/sabayon/images/silent-1280x1024.png
+pic=/etc/splash/sabayon/images/verbose-1280x1024.jpg
+silentpic=/etc/splash/sabayon/images/silent-1280x1024.jpg
 
 
 # progress bar
 box silent noover          1  984 1279  989 #000000
-box silent inter           1  985    1  988 #00b0ff
-box silent                 1  985 1279  988 #00b0ff
+box silent inter           1  985    1  988 #770000
+box silent                 1  985 1279  988 #770000
 
 
 # border of the progress bar
