--- a/corecd/sabayon-artwork-corecd/gensplash/sabayon/1400x1050.cfg
+++ b/corecd/sabayon-artwork-corecd/gensplash/sabayon/1400x1050.cfg
@@ -18,14 +18,14 @@ text_y=982
 text_size=14
 text_color=0x666666
 
-pic=/etc/splash/sabayon/images/verbose-1400x1050.png
-silentpic=/etc/splash/sabayon/images/silent-1400x1050.png
+pic=/etc/splash/sabayon/images/verbose-1400x1050.jpg
+silentpic=/etc/splash/sabayon/images/silent-1400x1050.jpg
 
 
 # progress bar
 box silent noover          1  1010 1399  1015 #000000
-box silent inter           1  1011    1  1014 #00b0ff
-box silent                 1  1011 1399  1014 #00b0ff
+box silent inter           1  1011    1  1014 #770000
+box silent                 1  1011 1399  1014 #770000
 
 
 # border of the progress bar
