--- a/corecd/sabayon-artwork-corecd/gensplash/sabayon/1600x1200.cfg
+++ b/corecd/sabayon-artwork-corecd/gensplash/sabayon/1600x1200.cfg
@@ -18,14 +18,14 @@ text_y=1132
 text_size=14
 text_color=0x666666
 
-pic=/etc/splash/sabayon/images/verbose-1600x1200.png
-silentpic=/etc/splash/sabayon/images/silent-1600x1200.png
+pic=/etc/splash/sabayon/images/verbose-1600x1200.jpg
+silentpic=/etc/splash/sabayon/images/silent-1600x1200.jpg
 
 
 # progress bar
 box silent noover          1 1160 1599 1165 #000000
-box silent inter           1 1161    1 1164 #00b0ff
-box silent                 1 1161 1599 1164 #00b0ff
+box silent inter           1 1161    1 1164 #770000
+box silent                 1 1161 1599 1164 #770000
 
 
 # border of the progress bar
