--- a/corecd/sabayon-artwork-corecd/gensplash/sabayon/800x600.cfg
+++ b/corecd/sabayon-artwork-corecd/gensplash/sabayon/800x600.cfg
@@ -18,14 +18,14 @@ text_y=532
 text_size=14
 text_color=0x666666
 
-pic=/etc/splash/sabayon/images/verbose-800x600.png
-silentpic=/etc/splash/sabayon/images/silent-800x600.png
+pic=/etc/splash/sabayon/images/verbose-800x600.jpg
+silentpic=/etc/splash/sabayon/images/silent-800x600.jpg
 
 
 # progress bar
 box silent noover          1  560  799  565 #000000
-box silent inter           1  561    1  564 #00b0ff
-box silent                 1  561  799  564 #00b0ff
+box silent inter           1  561    1  564 #770000
+box silent                 1  561  799  564 #770000
 
 
 # border of the progress bar
