--- a/4.2/sabayon-artwork-extra/emerald/Sabayon4.0/theme.ini
+++ b/4.2/sabayon-artwork-extra/emerald/Sabayon4.0/theme.ini
@@ -1,121 +1,4 @@
 
-[line_settings]
-active_border=#000000
-active_border_alpha=0
-active_title_bar=#000000
-active_title_bar_alpha=0
-inactive_border=#000000
-inactive_border_alpha=0
-inactive_title_bar=#000000
-inactive_title_bar_alpha=0
-
-[truglass_settings]
-active_base=#060606
-active_base_alpha=0.94999999999999996
-active_upper_title_glow=#060606
-active_upper_title_glow_alpha=0.59999999999999998
-active_upper_glow=#00b0ff
-active_upper_glow_alpha=0.80000000000000004
-active_lower_glow=#060606
-active_lower_glow_alpha=0.81999999999999995
-active_middle_glow=#ffffff
-active_middle_glow_alpha=0
-active_outer_glow=#000000
-active_outer_glow_alpha=0
-active_separator_line=#00b0ff
-active_separator_line_alpha=0
-active_window_halo=#20262a
-active_window_halo_alpha=0.80000000000000004
-active_window_highlight=#000000
-active_window_highlight_alpha=0
-active_window_shadow=#000000
-active_window_shadow_alpha=0
-active_contents_halo=#000000
-active_contents_halo_alpha=0
-active_contents_highlight=#000000
-active_contents_highlight_alpha=0
-active_contents_shadow=#000000
-active_contents_shadow_alpha=0
-inactive_base=#060606
-inactive_base_alpha=0.94999999999999996
-inactive_upper_title_glow=#060606
-inactive_upper_title_glow_alpha=0.59999999999999998
-inactive_upper_glow=#00b0ff
-inactive_upper_glow_alpha=0
-inactive_lower_glow=#666b6f
-inactive_lower_glow_alpha=0.81999999999999995
-inactive_middle_glow=#000000
-inactive_middle_glow_alpha=0
-inactive_outer_glow=#000000
-inactive_outer_glow_alpha=0
-inactive_separator_line=#000000
-inactive_separator_line_alpha=0
-inactive_window_halo=#20262a
-inactive_window_halo_alpha=0
-inactive_window_highlight=#000000
-inactive_window_highlight_alpha=0
-inactive_window_shadow=#000000
-inactive_window_shadow_alpha=0
-inactive_contents_halo=#000000
-inactive_contents_halo_alpha=0
-inactive_contents_highlight=#000000
-inactive_contents_highlight_alpha=0
-inactive_contents_shadow=#000000
-inactive_contents_shadow_alpha=0
-round_top_left=true
-round_top_right=true
-round_bottom_left=true
-round_bottom_right=true
-radius=15
-glow_height=1.2
-
-[oxygen_settings]
-active_base=#000000
-active_base_alpha=1
-active_glow=#000000
-active_glow_alpha=1
-active_sides=#000000
-active_sides_alpha=1
-active_separator_line=#000000
-active_separator_line_alpha=0
-active_window_halo=#000000
-active_window_halo_alpha=0
-active_window_highlight=#000000
-active_window_highlight_alpha=0
-active_window_shadow=#000000
-active_window_shadow_alpha=0
-active_contents_halo=#000000
-active_contents_halo_alpha=0
-active_contents_highlight=#000000
-active_contents_highlight_alpha=0
-active_contents_shadow=#000000
-active_contents_shadow_alpha=0
-inactive_base=#000000
-inactive_base_alpha=0
-inactive_glow=#000000
-inactive_glow_alpha=0
-inactive_sides=#000000
-inactive_sides_alpha=0
-inactive_separator_line=#000000
-inactive_separator_line_alpha=0
-inactive_window_halo=#000000
-inactive_window_halo_alpha=0
-inactive_window_highlight=#000000
-inactive_window_highlight_alpha=0
-inactive_window_shadow=#000000
-inactive_window_shadow_alpha=0
-inactive_contents_halo=#000000
-inactive_contents_halo_alpha=0
-inactive_contents_highlight=#000000
-inactive_contents_highlight_alpha=0
-inactive_contents_shadow=#000000
-inactive_contents_shadow_alpha=0
-round_top_left=false
-round_top_right=false
-round_bottom_left=false
-round_bottom_right=false
-radius=0
-
 [legacy_settings]
 active_outer=#313233
 active_outer_alpha=0.80000000000000004
@@ -161,29 +44,33 @@ inactive_contents_highlight=#000000
 inactive_contents_highlight_alpha=0
 inactive_contents_shadow=#000000
 inactive_contents_shadow_alpha=0.34999999999999998
-round_top_left=true
-round_top_right=true
+round_top_left=false
+round_top_right=false
 round_bottom_left=false
 round_bottom_right=false
 radius=7
 
-[zootreeves_settings]
-active_outer=#000000
-active_outer_alpha=0
-active_inner=#000000
-active_inner_alpha=0
-active_title_outer=#000000
-active_title_outer_alpha=0
-active_title_inner=#000000
-active_title_inner_alpha=0
-active_gradient_repeat_enabled=false
-active_gradient_repeat_direction_vertical=false
-active_gradient_repeat_direction_diagonal=false
-active_gradient_repeat_height=0
+[line_settings]
+active_border=#000000
+active_border_alpha=0
+active_title_bar=#000000
+active_title_bar_alpha=0
+inactive_border=#000000
+inactive_border_alpha=0
+inactive_title_bar=#000000
+inactive_title_bar_alpha=0
+
+[oxygen_settings]
+active_base=#000000
+active_base_alpha=0
+active_glow=#000000
+active_glow_alpha=0
+active_sides=#000000
+active_sides_alpha=0
 active_separator_line=#000000
 active_separator_line_alpha=0
-active_window_frame_halo=#000000
-active_window_frame_halo_alpha=0
+active_window_halo=#000000
+active_window_halo_alpha=0
 active_window_highlight=#000000
 active_window_highlight_alpha=0
 active_window_shadow=#000000
@@ -194,22 +81,16 @@ active_contents_highlight=#000000
 active_contents_highlight_alpha=0
 active_contents_shadow=#000000
 active_contents_shadow_alpha=0
-inactive_outer=#000000
-inactive_outer_alpha=0
-inactive_inner=#000000
-inactive_inner_alpha=0
-inactive_title_outer=#000000
-inactive_title_outer_alpha=0
-inactive_title_inner=#000000
-inactive_title_inner_alpha=0
-inactive_gradient_repeat_enabled=false
-inactive_gradient_repeat_direction_vertical=false
-inactive_gradient_repeat_direction_diagonal=false
-inactive_gradient_repeat_height=0
+inactive_base=#000000
+inactive_base_alpha=0
+inactive_glow=#000000
+inactive_glow_alpha=0
+inactive_sides=#000000
+inactive_sides_alpha=0
 inactive_separator_line=#000000
 inactive_separator_line_alpha=0
-inactive_window_frame_halo=#000000
-inactive_window_frame_halo_alpha=0
+inactive_window_halo=#000000
+inactive_window_halo_alpha=0
 inactive_window_highlight=#000000
 inactive_window_highlight_alpha=0
 inactive_window_shadow=#000000
@@ -220,38 +101,134 @@ inactive_contents_highlight=#000000
 inactive_contents_highlight_alpha=0
 inactive_contents_shadow=#000000
 inactive_contents_shadow_alpha=0
-enable_maximised_colors=true
-gradient_repeat_disabled_maximised=false
-outer_maximised_color=#3e0c0c
-outer_maximised_alpha=0.32000000000000001
-inner_maximised_color=#dada71
-inner_maximised_alpha=1
 round_top_left=false
 round_top_right=false
 round_bottom_left=false
 round_bottom_right=false
-frame_radius=0
-titlebar_radius=0
-window_gap=5
-show_border_maximised=false
-show_border_minimised=false
-minimised_border=0
-enable_title_bar_dip=false
-enable_bar_dip_button_part=false
-title_bar_dip_title_width=80
-title_bar_dip_button_width=10
-title_bar_dip_radius=1
-round_tri=false
-enable_left_bar_dip=false
-left_bar_dip_radius=0
-enable_left_bar_dip_lower_part=false
-left_bar_dip_offset=0
-pixmaps_titlebarpart_enabled=false
-pixmaps_titlebarpart_repeat_enabled=false
-pixmaps_buttonpart_enabled=false
-pixmaps_buttonpart_repeat_enabled=false
-pixmaps_titlebar_enabled=false
-pixmaps_titlebar_repeat_enabled=false
+radius=0
+
+[truglass_settings]
+active_base=#000000
+active_base_alpha=0
+active_upper_title_glow=#000000
+active_upper_title_glow_alpha=0
+active_upper_glow=#000000
+active_upper_glow_alpha=0
+active_lower_glow=#000000
+active_lower_glow_alpha=0
+active_middle_glow=#000000
+active_middle_glow_alpha=0
+active_outer_glow=#000000
+active_outer_glow_alpha=0
+active_separator_line=#000000
+active_separator_line_alpha=0
+active_window_halo=#000000
+active_window_halo_alpha=0
+active_window_highlight=#000000
+active_window_highlight_alpha=0
+active_window_shadow=#000000
+active_window_shadow_alpha=0
+active_contents_halo=#000000
+active_contents_halo_alpha=0
+active_contents_highlight=#000000
+active_contents_highlight_alpha=0
+active_contents_shadow=#000000
+active_contents_shadow_alpha=0
+inactive_base=#000000
+inactive_base_alpha=0
+inactive_upper_title_glow=#000000
+inactive_upper_title_glow_alpha=0
+inactive_upper_glow=#000000
+inactive_upper_glow_alpha=0
+inactive_lower_glow=#000000
+inactive_lower_glow_alpha=0
+inactive_middle_glow=#000000
+inactive_middle_glow_alpha=0
+inactive_outer_glow=#000000
+inactive_outer_glow_alpha=0
+inactive_separator_line=#000000
+inactive_separator_line_alpha=0
+inactive_window_halo=#000000
+inactive_window_halo_alpha=0
+inactive_window_highlight=#000000
+inactive_window_highlight_alpha=0
+inactive_window_shadow=#000000
+inactive_window_shadow_alpha=0
+inactive_contents_halo=#000000
+inactive_contents_halo_alpha=0
+inactive_contents_highlight=#000000
+inactive_contents_highlight_alpha=0
+inactive_contents_shadow=#000000
+inactive_contents_shadow_alpha=0
+round_top_left=false
+round_top_right=false
+round_bottom_left=false
+round_bottom_right=false
+radius=0
+glow_height=0
+
+[vrunner_settings]
+active_title_left=#464646
+active_title_left_alpha=0.79000000000000004
+active_title_middle=#464646
+active_title_middle_alpha=0.79000000000000004
+active_title_right=#464646
+active_title_right_alpha=0.79000000000000004
+active_color_contrast=0
+active_alpha_contrast=1
+active_title_notch_position=0.51000000000000001
+active_curve_offset=2.7999999999999998
+active_use_glow=false
+active_glow_inner=#ffffff
+active_glow_inner_alpha=0.73999999999999999
+active_glow_radius=6.9000000000000004
+active_separator_line=#000000
+active_separator_line_alpha=0
+active_window_halo=#000000
+active_window_halo_alpha=1
+active_window_highlight=#ffffff
+active_window_highlight_alpha=0.14999999999999999
+active_window_shadow=#ffffff
+active_window_shadow_alpha=0.070000000000000007
+active_contents_halo=#000000
+active_contents_halo_alpha=1
+active_contents_highlight=#ffffff
+active_contents_highlight_alpha=0.10000000000000001
+active_contents_shadow=#ffffff
+active_contents_shadow_alpha=0.059999999999999998
+inactive_title_left=#313131
+inactive_title_left_alpha=0.78000000000000003
+inactive_title_middle=#313131
+inactive_title_middle_alpha=0.78000000000000003
+inactive_title_right=#313131
+inactive_title_right_alpha=0.78000000000000003
+inactive_color_contrast=0
+inactive_alpha_contrast=0.98999999999999999
+inactive_title_notch_position=0.51000000000000001
+inactive_curve_offset=2.1000000000000001
+inactive_use_glow=false
+inactive_glow_inner=#4a4a4a
+inactive_glow_inner_alpha=0.26000000000000001
+inactive_glow_radius=25
+inactive_separator_line=#000000
+inactive_separator_line_alpha=0
+inactive_window_halo=#000000
+inactive_window_halo_alpha=1
+inactive_window_highlight=#ffffff
+inactive_window_highlight_alpha=0.10000000000000001
+inactive_window_shadow=#ffffff
+inactive_window_shadow_alpha=0.050000000000000003
+inactive_contents_halo=#000000
+inactive_contents_halo_alpha=1
+inactive_contents_highlight=#ffffff
+inactive_contents_highlight_alpha=0.10000000000000001
+inactive_contents_shadow=#ffffff
+inactive_contents_shadow_alpha=0.050000000000000003
+round_top_left=true
+round_top_right=true
+round_bottom_left=true
+round_bottom_right=true
+radius=5.4000000000000004
 
 [pixmap_settings]
 active_top_use_scaled=false
@@ -352,68 +329,91 @@ round_bottom_right=true
 top_radius=15
 bottom_radius=5
 
-[vrunner_settings]
-active_title_left=#5d5d5d
-active_title_left_alpha=1
-active_title_middle=#060606
-active_title_middle_alpha=1
-active_title_right=#5d5d5d
-active_title_right_alpha=1
-active_color_contrast=0
-active_alpha_contrast=1
-active_title_notch_position=0.55000000000000004
-active_curve_offset=-21.100000000000001
-active_use_glow=false
-active_glow_inner=#ffffff
-active_glow_inner_alpha=0.73999999999999999
-active_glow_radius=6.9000000000000004
+[zootreeves_settings]
+active_outer=#000000
+active_outer_alpha=0
+active_inner=#000000
+active_inner_alpha=0
+active_title_outer=#000000
+active_title_outer_alpha=0
+active_title_inner=#000000
+active_title_inner_alpha=0
+active_gradient_repeat_enabled=false
+active_gradient_repeat_direction_vertical=false
+active_gradient_repeat_direction_diagonal=false
+active_gradient_repeat_height=0
 active_separator_line=#000000
 active_separator_line_alpha=0
-active_window_halo=#000000
-active_window_halo_alpha=1
+active_window_frame_halo=#000000
+active_window_frame_halo_alpha=0
 active_window_highlight=#000000
-active_window_highlight_alpha=1
+active_window_highlight_alpha=0
 active_window_shadow=#000000
-active_window_shadow_alpha=1
+active_window_shadow_alpha=0
 active_contents_halo=#000000
 active_contents_halo_alpha=0
-active_contents_highlight=#ffffff
+active_contents_highlight=#000000
 active_contents_highlight_alpha=0
-active_contents_shadow=#ffffff
+active_contents_shadow=#000000
 active_contents_shadow_alpha=0
-inactive_title_left=#060606
-inactive_title_left_alpha=0.84999999999999998
-inactive_title_middle=#060606
-inactive_title_middle_alpha=0.90000000000000002
-inactive_title_right=#060606
-inactive_title_right_alpha=0.84999999999999998
-inactive_color_contrast=0.52000000000000002
-inactive_alpha_contrast=1
-inactive_title_notch_position=0.5
-inactive_curve_offset=0
-inactive_use_glow=false
-inactive_glow_inner=#4a4a4a
-inactive_glow_inner_alpha=0.26000000000000001
-inactive_glow_radius=25
-inactive_separator_line=#060606
+inactive_outer=#000000
+inactive_outer_alpha=0
+inactive_inner=#000000
+inactive_inner_alpha=0
+inactive_title_outer=#000000
+inactive_title_outer_alpha=0
+inactive_title_inner=#000000
+inactive_title_inner_alpha=0
+inactive_gradient_repeat_enabled=false
+inactive_gradient_repeat_direction_vertical=false
+inactive_gradient_repeat_direction_diagonal=false
+inactive_gradient_repeat_height=0
+inactive_separator_line=#000000
 inactive_separator_line_alpha=0
-inactive_window_halo=#000000
-inactive_window_halo_alpha=1
+inactive_window_frame_halo=#000000
+inactive_window_frame_halo_alpha=0
 inactive_window_highlight=#000000
-inactive_window_highlight_alpha=1
+inactive_window_highlight_alpha=0
 inactive_window_shadow=#000000
-inactive_window_shadow_alpha=1
+inactive_window_shadow_alpha=0
 inactive_contents_halo=#000000
 inactive_contents_halo_alpha=0
-inactive_contents_highlight=#ffffff
+inactive_contents_highlight=#000000
 inactive_contents_highlight_alpha=0
-inactive_contents_shadow=#ffffff
+inactive_contents_shadow=#000000
 inactive_contents_shadow_alpha=0
-round_top_left=true
-round_top_right=true
+enable_maximised_colors=true
+gradient_repeat_disabled_maximised=false
+outer_maximised_color=#3e0c0c
+outer_maximised_alpha=0.32000000000000001
+inner_maximised_color=#dada71
+inner_maximised_alpha=1
+round_top_left=false
+round_top_right=false
 round_bottom_left=false
 round_bottom_right=false
-radius=13
+frame_radius=0
+titlebar_radius=0
+window_gap=5
+show_border_maximised=false
+show_border_minimised=false
+minimised_border=0
+enable_title_bar_dip=false
+enable_bar_dip_button_part=false
+title_bar_dip_title_width=80
+title_bar_dip_button_width=10
+title_bar_dip_radius=1
+round_tri=false
+enable_left_bar_dip=false
+left_bar_dip_radius=0
+enable_left_bar_dip_lower_part=false
+left_bar_dip_offset=0
+pixmaps_titlebarpart_enabled=false
+pixmaps_titlebarpart_repeat_enabled=false
+pixmaps_buttonpart_enabled=false
+pixmaps_buttonpart_repeat_enabled=false
+pixmaps_titlebar_enabled=false
+pixmaps_titlebar_repeat_enabled=false
 
 [engine_version]
 vrunner=0.2
@@ -425,46 +425,46 @@ engine=vrunner
 use_pixmap_buttons=true
 use_button_glow=false
 use_button_inactive_glow=false
-active_button=#6b6b6b
-active_button_alpha=0
+active_button=#ffffff
+active_button_alpha=1
 active_button_halo=#000000
-active_button_halo_alpha=0.75
+active_button_halo_alpha=1
 inactive_button=#202020
 inactive_button_alpha=0.5
 inactive_button_halo=#404040
 inactive_button_halo_alpha=1
-vertical_offset=2
+vertical_offset=3
 horizontal_offset=2
 
 [shadow]
-shadow_color=#939393
-shadow_opacity=0.76000000000000001
-shadow_radius=7.7999999999999998
+shadow_color=#000000
+shadow_opacity=0.89000000000000001
+shadow_radius=12.9
 shadow_offset_x=0
-shadow_offset_y=0
+shadow_offset_y=4
 
 [borders]
-top=3
-bottom=2
-left=1
-right=1
+top=4
+bottom=11
+left=5
+right=5
 
 [titlebar]
-active_text=#d8d8d8
-active_text_alpha=0.90000000000000002
-active_text_halo=#ffffff
-active_text_halo_alpha=0
-inactive_text=#717171
-inactive_text_alpha=0.69999999999999996
-inactive_text_halo=#ebebeb
+active_text=#ffffff
+active_text_alpha=1
+active_text_halo=#000000
+active_text_halo_alpha=0.44
+inactive_text=#909090
+inactive_text_alpha=1
+inactive_text_halo=#909090
 inactive_text_halo_alpha=0
-titlebar_font=Aharoni CLM 10
-min_titlebar_height=18
-title_object_layout=M(8):I(5)T:N(3)X(3)C(3)
+titlebar_font=Sans Bold 10
+min_titlebar_height=22
+title_object_layout=I(0):T:N(0)X(0)C
 
 [theme]
-creator=SabayonLinux/Thev00d00
-description=A glassy theme for use with Sabayon 4.0
-theme_version=0.1
-suggested=Qtcurve/Murrine
-version=0.7.8
+creator=Ian "Thev00d00" Whyman
+description=Based on "Radial by aceph"
+theme_version=4.2.0
+suggested=ClearlooksSL
+version=0.8.2
