--- a/5.0/sabayon-artwork-kde/ksplash4/Sabayon/Theme.rc
+++ b/5.0/sabayon-artwork-kde/ksplash4/Sabayon/Theme.rc
@@ -1,7 +1,7 @@
 [KSplash Theme: Default]
 Name = Sabayon KDE Splash Screen
 Description = Sabayon KDE Splash Screen
-Version = 1.0
+Version = 5.0_beta1
 Author = Nuno Pinheiro <nuno@oxygen-icons.org> & Riccardo Iaconelli <riccardo@kde.org>, Fabio Erculiani <lxnay@sabayonlinux.org>
 Homepage = http://www.kde.org
 
