--- a/5.0/sabayon-artwork-gnome/gdm/Sabayon_Linux/GdmGreeterTheme.desktop
+++ b/5.0/sabayon-artwork-gnome/gdm/Sabayon_Linux/GdmGreeterTheme.desktop
@@ -1,7 +1,7 @@
 [GdmGreeterTheme]
-Greeter=Sabayon40.xml
-Name=Sabayon 4.0 Default GDM
-Description=Sabayon 4.0 Default GDM v0.3
+Greeter=SabayonGDM.xml
+Name=Sabayon 5.0 Default GDM
+Description=Sabayon-Artwork-Gnome 5.0_beta2
 Author= Ian Whyman <ian.whyman@sabayonlinux.org>
 Screenshot=F
 Copyright=Sabayon Linux 2008-9
