--- a/5.0/sabayon-artwork-kde/ksplash/Sabayon/Theme.rc
+++ b/5.0/sabayon-artwork-kde/ksplash/Sabayon/Theme.rc
@@ -1,9 +1,9 @@
 [KSplash Theme: Default]
 Name = Sabayon KDE Splash Screen
 Description = Sabayon KDE Splash Screen
-Version = 5.0_beta1
-Author = Nuno Pinheiro <nuno@oxygen-icons.org> & Riccardo Iaconelli <riccardo@kde.org>, Fabio Erculiani <lxnay@sabayonlinux.org>
-Homepage = http://www.kde.org
+Version = 5.0_beta2
+Author = Nuno Pinheiro <nuno@oxygen-icons.org> & Riccardo Iaconelli <riccardo@kde.org>, Ian Whyman <ian.whyman@sabayonlinux.org>
+Homepage = http://www.sabayon.org
 
 # Theme behaviour settings.
 Engine = KSplashX
