[5.0] Fix bright red Gnome start items left over from debugging

--- a/5.0/sabayon-artwork-gnome/gtk/Saburreza/gtk-2.0/panel.rc
+++ b/5.0/sabayon-artwork-gnome/gtk/Saburreza/gtk-2.0/panel.rc
@@ -9,15 +9,15 @@ style "theme-panel"
 
  fg[NORMAL]		= "#ffffff"
  fg[SELECTED]	= "#333333"
- fg[ACTIVE]      = "#ff0000"
+ fg[ACTIVE]      = "#333333"
  fg[PRELIGHT]	= "#000000"
- fg[INSENSITIVE]   = "#ff0000"
-	
-	text[NORMAL]      = "#ffffff"
-	text[PRELIGHT]    = "#222222"
-	text[SELECTED]    = "#222222"
-	text[ACTIVE]      = "#ffffff"
-	text[INSENSITIVE] = "#d0d0d0"
+ fg[INSENSITIVE]   = "#222222"
+
+  text[NORMAL]      = "#ffffff"
+  text[PRELIGHT]    = "#222222"
+  text[SELECTED]    = "#222222"
+  text[ACTIVE]      = "#ffffff"
+  text[INSENSITIVE] = "#d0d0d0"
 }
 
 widget "*PanelWidget*"		  style "theme-panel"
@@ -32,7 +32,7 @@ widget_class "*Mail*"		  style "theme-panel"
 class "*Panel*"		          style "theme-panel"
 widget_class "*notif*"		  style "theme-panel"
 widget_class "*Notif*"		  style "theme-panel"
-widget_class "*Tray*"		  style "theme-panel" 
+widget_class "*Tray*"		  style "theme-panel"
 widget_class "*tray*"		  style "theme-panel"
 widget_class "*computertemp*"	  style "theme-panel"
 widget_class "*Applet*Tomboy*"	  style "theme-panel"
