--- a/5.2/sabayon-artwork-kde/ksplash/Sabayon/Theme.rc
+++ b/5.2/sabayon-artwork-kde/ksplash/Sabayon/Theme.rc
@@ -1,8 +1,8 @@
 [KSplash Theme: Default]
 Name = Sabayon KDE Splash Screen
 Description = Sabayon KDE Splash Screen
-Version = 5.0_beta2
-Author = Nuno Pinheiro <nuno@oxygen-icons.org> & Riccardo Iaconelli <riccardo@kde.org>, Ian Whyman <ian.whyman@sabayonlinux.org>
+Version = 5.x
+Author =  Ian Whyman <ian.whyman@sabayonlinux.org>, Nuno Pinheiro <nuno@oxygen-icons.org> & Riccardo Iaconelli <riccardo@kde.org>
 Homepage = http://www.sabayon.org
 
 # Theme behaviour settings.
