--- a/5.4/sabayon-artwork-core/gensplash/sabayon/1024x600.cfg
+++ b/5.4/sabayon-artwork-core/gensplash/sabayon/1024x600.cfg
@@ -16,7 +16,7 @@ th=515
 text_x=15
 text_y=532
 text_size=14
-text_color=0x666666
+text_color=0xFFFFFF
 
 pic=/etc/splash/sabayon/images/verbose-1024x600.jpg
 silentpic=/etc/splash/sabayon/images/silent-1024x600.jpg
@@ -24,8 +24,8 @@ silentpic=/etc/splash/sabayon/images/silent-1024x600.jpg
 
 # progress bar
 box silent noover          1  561  1023  565 #000000
-box silent inter           1  561    1  564 #00b0ff
-box silent                 1  561  1023  564 #00b0ff
+box silent inter           1  561    1  564 #3671BF
+box silent                 1  561  1023  564 #3671BF
 
 
 # border of the progress bar
