--- a/5.4/sabayon-artwork-core/gensplash/sabayon/1024x768.cfg
+++ b/5.4/sabayon-artwork-core/gensplash/sabayon/1024x768.cfg
@@ -16,7 +16,7 @@ th=683
 text_x=15
 text_y=700
 text_size=14
-text_color=0x666666
+text_color=0xFFFFFF
 
 pic=/etc/splash/sabayon/images/verbose-1024x768.jpg
 silentpic=/etc/splash/sabayon/images/silent-1024x768.jpg
@@ -24,8 +24,8 @@ silentpic=/etc/splash/sabayon/images/silent-1024x768.jpg
 
 # progress bar
 box silent noover          1  728 1023  733 #000000
-box silent inter           1  729    1  732 #00b0ff
-box silent                 1  729 1023  732 #00b0ff
+box silent inter           1  729    1  732 #3671BF
+box silent                 1  729 1023  732 #3671BF
 
 
 # border of the progress bar
