--- a/5.4/sabayon-artwork-core/gensplash/sabayon/1280x1024.cfg
+++ b/5.4/sabayon-artwork-core/gensplash/sabayon/1280x1024.cfg
@@ -16,7 +16,7 @@ th=929
 text_x=15
 text_y=956
 text_size=14
-text_color=0x666666
+text_color=0xFFFFFF
 
 
 
@@ -26,8 +26,8 @@ silentpic=/etc/splash/sabayon/images/silent-1280x1024.jpg
 
 # progress bar
 box silent noover          1  984 1279  989 #000000
-box silent inter           1  985    1  988 #00b0ff
-box silent                 1  985 1279  988 #00b0ff
+box silent inter           1  985    1  988 #3671BF
+box silent                 1  985 1279  988 #3671BF
 
 
 # border of the progress bar
