--- a/5.4/sabayon-artwork-core/gensplash/sabayon/1280x800.cfg
+++ b/5.4/sabayon-artwork-core/gensplash/sabayon/1280x800.cfg
@@ -15,7 +15,7 @@ th=700
 text_x=15
 text_y=732
 text_size=14
-text_color=0x666666
+text_color=0xFFFFFF
 
 pic=/etc/splash/sabayon/images/verbose-1280x800.jpg
 silentpic=/etc/splash/sabayon/images/silent-1280x800.jpg
@@ -23,8 +23,8 @@ silentpic=/etc/splash/sabayon/images/silent-1280x800.jpg
 
 # progress bar
 box silent noover          1  760 1279  765 #000000
-box silent inter           1  761    1  764 #00b0ff
-box silent                 1  761 1279  764 #00b0ff
+box silent inter           1  761    1  764 #3671BF
+box silent                 1  761 1279  764 #3671BF
 
 
 # border of the progress bar
