--- a/5.4/sabayon-artwork-core/gensplash/sabayon/1440x900.cfg
+++ b/5.4/sabayon-artwork-core/gensplash/sabayon/1440x900.cfg
@@ -16,7 +16,7 @@ th=800
 text_x=15
 text_y=832
 text_size=14
-text_color=0x666666
+text_color=0xFFFFFF
 
 pic=/etc/splash/sabayon/images/verbose-1440x900.jpg
 silentpic=/etc/splash/sabayon/images/silent-1440x900.jpg
@@ -24,8 +24,8 @@ silentpic=/etc/splash/sabayon/images/silent-1440x900.jpg
 
 # progress bar
 box silent noover          1  860 1439  865 #000000
-box silent inter           1  861    1  864 #00b0ff
-box silent                 1  861 1439  864 #00b0ff
+box silent inter           1  861    1  864 #3671BF
+box silent                 1  861 1439  864 #3671BF
 
 
 # border of the progress bar
