--- a/5.4/sabayon-artwork-core/gensplash/sabayon/1680x1050.cfg
+++ b/5.4/sabayon-artwork-core/gensplash/sabayon/1680x1050.cfg
@@ -16,7 +16,7 @@ th=965
 text_x=15
 text_y=982
 text_size=14
-text_color=0x666666
+text_color=0xFFFFFF
 
 pic=/etc/splash/sabayon/images/verbose-1680x1050.jpg
 silentpic=/etc/splash/sabayon/images/silent-1680x1050.jpg
@@ -24,8 +24,8 @@ silentpic=/etc/splash/sabayon/images/silent-1680x1050.jpg
 
 # progress bar
 box silent noover          1 1010 1679 1015 #000000
-box silent inter           1 1011    1 1014 #00b0ff
-box silent                 1 1011 1679 1014 #00b0ff
+box silent inter           1 1011    1 1014 #3671BF
+box silent                 1 1011 1679 1014 #3671BF
 
 
 # border of the progress bar
