--- a/5.4/sabayon-artwork-core/gensplash/sabayon/1920x1200.cfg
+++ b/5.4/sabayon-artwork-core/gensplash/sabayon/1920x1200.cfg
@@ -16,7 +16,7 @@ th=1115
 text_x=15
 text_y=1132
 text_size=14
-text_color=0x666666
+text_color=0xFFFFFF
 
 pic=/etc/splash/sabayon/images/verbose-1920x1200.jpg
 silentpic=/etc/splash/sabayon/images/silent-1920x1200.jpg
@@ -24,8 +24,8 @@ silentpic=/etc/splash/sabayon/images/silent-1920x1200.jpg
 
 # progress bar
 box silent noover          1 1160 1919 1165 #000000
-box silent inter           1 1161    1 1164 #00b0ff
-box silent                 1 1161 1919 1164 #00b0ff
+box silent inter           1 1161    1 1164 #3671BF
+box silent                 1 1161 1919 1164 #3671BF
 
 
 # border of the progress bar
