--- a/6/sabayon-artwork-core/fbsplash/sabayon/1680x1050.cfg
+++ b/6/sabayon-artwork-core/fbsplash/sabayon/1680x1050.cfg
@@ -1,8 +1,8 @@
-# Copyright 2004-2009 Sabayon Linux
+# Copyright 2004-2011 Sabayon Linux
 # Distributed under the terms of the GNU General Public License v2
 #
 # Theme design and graphics by
-# Ian Whyman <ian.whyman@sabayonlinux.org>
+# Ian Whyman <ian.whyman@sabayon.org>
 #
 text_font=/etc/splash/sabayon/luxisri.ttf
 
