--- a/6/sabayon-artwork-core/fbsplash/sabayon/1920x1200.cfg
+++ b/6/sabayon-artwork-core/fbsplash/sabayon/1920x1200.cfg
@@ -1,8 +1,8 @@
-# Copyright 2004-2009 Sabayon Linux
+# Copyright 2004-2011 Sabayon Linux
 # Distributed under the terms of the GNU General Public License v2
 #
 # Theme design and graphics by
-# Ian Whyman <ian.whyman@sabayonlinux.org>
+# Ian Whyman <ian.whyman@sabayon.org>
 #
 text_font=/etc/splash/sabayon/luxisri.ttf
 
@@ -10,7 +10,7 @@ bgcolor=0
 
 tx=20
 ty=20
-tw=1560
+tw=1880
 th=1115
 
 text_x=15
@@ -29,8 +29,8 @@ box silent                 1 1161 1919 1164 #3671BF
 
 
 # border of the progress bar
-box silent                 1 1160 1599 1160 #595959
+box silent                 1 1160 1919 1160 #595959
 box silent                 1 1165 1919 1165 #595959
 box silent                 1 1160    1 1165 #595959
-box silent              1599 1160 1919 1165 #595959
+box silent              1919 1160 1919 1165 #595959
 
