--- a/6/sabayon-artwork-core/fbsplash/sabayon/1600x1200.cfg
+++ b/6/sabayon-artwork-core/fbsplash/sabayon/1600x1200.cfg
@@ -1,5 +1,5 @@
 # Copyright 2004-2011 Sabayon Linux
-# Distributed under the terms of the GNU General Public License v2
+# This work is licensed under a Creative Commons Attribution-ShareAlike 3.0 License.
 #
 # Theme design and graphics by
 # Ian Whyman <ian.whyman@sabayon.org>
