--- a/6/sabayon-artwork-gnome/gdm/Sabayon_Linux/GdmGreeterTheme.desktop
+++ b/6/sabayon-artwork-gnome/gdm/Sabayon_Linux/GdmGreeterTheme.desktop
@@ -1,7 +1,8 @@
 [GdmGreeterTheme]
+Encoding=UTF-8
 Greeter=SabayonGDM.xml
-Name=Sabayon 5.0 Default GDM
-Description=Sabayon-Artwork-Gnome 5.0_beta2
-Author= Ian Whyman <ian.whyman@sabayonlinux.org>
-Screenshot=F
-Copyright=Sabayon Linux 2008-9
+Name=Sabayon
+Description=Sabayon Offical GDM Theme
+Author= Ian Whyman <ian.whyman@sabayon.org>
+Copyright=(c) 2008-11 Sabayon Promotion
+Screenshot=screenshot.png
