[6/kde] Update version numbers & license

--- a/6/sabayon-artwork-kde/ksplash/Sabayon/Theme.rc
+++ b/6/sabayon-artwork-kde/ksplash/Sabayon/Theme.rc
@@ -1,8 +1,8 @@
 [KSplash Theme: Default]
 Name = Sabayon KDE Splash Screen
 Description = Sabayon KDE Splash Screen
-Version = 5.x
-Author =  Ian Whyman <ian.whyman@sabayonlinux.org>, Nuno Pinheiro <nuno@oxygen-icons.org> & Riccardo Iaconelli <riccardo@kde.org>
+Version = 6
+Author =  Ian Whyman <ian.whyman@sabayon.org>, Nuno Pinheiro <nuno@oxygen-icons.org> & Riccardo Iaconelli <riccardo@kde.org>
 Homepage = http://www.sabayon.org
 
 # Theme behaviour settings.
