[releases/8] switch fbsplash artwork to PNG, renders much better

--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1024x768.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1024x768.cfg
@@ -18,8 +18,8 @@ text_y=700
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-1024x768.jpg
-silentpic=/etc/splash/sabayon/images/silent-1024x768.jpg
+pic=/etc/splash/sabayon/images/verbose-1024x768.png
+silentpic=/etc/splash/sabayon/images/silent-1024x768.png
 
 
 # progress bar
