--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1920x1200.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1920x1200.cfg
@@ -18,8 +18,8 @@ text_y=1132
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-1920x1200.jpg
-silentpic=/etc/splash/sabayon/images/silent-1920x1200.jpg
+pic=/etc/splash/sabayon/images/verbose-1920x1200.png
+silentpic=/etc/splash/sabayon/images/silent-1920x1200.png
 
 
 # progress bar
