--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/640x480.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/640x480.cfg
@@ -18,8 +18,8 @@ text_y=425
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-640x480.jpg
-silentpic=/etc/splash/sabayon/images/silent-640x480.jpg
+pic=/etc/splash/sabayon/images/verbose-640x480.png
+silentpic=/etc/splash/sabayon/images/silent-640x480.png
 
 
 # progress bar
