--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/800x600.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/800x600.cfg
@@ -18,8 +18,8 @@ text_y=532
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-800x600.jpg
-silentpic=/etc/splash/sabayon/images/silent-800x600.jpg
+pic=/etc/splash/sabayon/images/verbose-800x600.png
+silentpic=/etc/splash/sabayon/images/silent-800x600.png
 
 
 # progress bar
