--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1152x864.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1152x864.cfg
@@ -18,8 +18,8 @@ text_y=796
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-1152x864.jpg
-silentpic=/etc/splash/sabayon/images/silent-1152x864.jpg
+pic=/etc/splash/sabayon/images/verbose-1152x864.png
+silentpic=/etc/splash/sabayon/images/silent-1152x864.png
 
 # progress bar
 box silent noover          1  824 1151  829 #000000
