--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1280x1024.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1280x1024.cfg
@@ -20,8 +20,8 @@ text_color=0xFFFFFF
 
 
 
-pic=/etc/splash/sabayon/images/verbose-1280x1024.jpg
-silentpic=/etc/splash/sabayon/images/silent-1280x1024.jpg
+pic=/etc/splash/sabayon/images/verbose-1280x1024.png
+silentpic=/etc/splash/sabayon/images/silent-1280x1024.png
 
 
 # progress bar
