--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1280x720.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1280x720.cfg
@@ -18,8 +18,8 @@ text_y=652
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-1280x720.jpg
-silentpic=/etc/splash/sabayon/images/silent-1280x720.jpg
+pic=/etc/splash/sabayon/images/verbose-1280x720.png
+silentpic=/etc/splash/sabayon/images/silent-1280x720.png
 
 # progress bar
 box silent noover          1  680 1279  685 #000000
