--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1280x800.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1280x800.cfg
@@ -17,8 +17,8 @@ text_y=732
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-1280x800.jpg
-silentpic=/etc/splash/sabayon/images/silent-1280x800.jpg
+pic=/etc/splash/sabayon/images/verbose-1280x800.png
+silentpic=/etc/splash/sabayon/images/silent-1280x800.png
 
 
 # progress bar
