--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1366x768.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1366x768.cfg
@@ -18,8 +18,8 @@ text_y=1300
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-1366x768.jpg
-silentpic=/etc/splash/sabayon/images/silent-1366x768.jpg
+pic=/etc/splash/sabayon/images/verbose-1366x768.png
+silentpic=/etc/splash/sabayon/images/silent-1366x768.png
 
 # progress bar
 box silent noover          1  728 1365  733 #000000
