--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1400x1050.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1400x1050.cfg
@@ -18,8 +18,8 @@ text_y=982
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-1400x1050.jpg
-silentpic=/etc/splash/sabayon/images/silent-1400x1050.jpg
+pic=/etc/splash/sabayon/images/verbose-1400x1050.png
+silentpic=/etc/splash/sabayon/images/silent-1400x1050.png
 
 
 # progress bar
