--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1440x900.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1440x900.cfg
@@ -18,8 +18,8 @@ text_y=832
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-1440x900.jpg
-silentpic=/etc/splash/sabayon/images/silent-1440x900.jpg
+pic=/etc/splash/sabayon/images/verbose-1440x900.png
+silentpic=/etc/splash/sabayon/images/silent-1440x900.png
 
 
 # progress bar
