--- a/releases/8/sabayon-artwork-core/fbsplash/sabayon/1920x1080.cfg
+++ b/releases/8/sabayon-artwork-core/fbsplash/sabayon/1920x1080.cfg
@@ -18,8 +18,8 @@ text_y=1012
 text_size=14
 text_color=0xFFFFFF
 
-pic=/etc/splash/sabayon/images/verbose-1920x1080.jpg
-silentpic=/etc/splash/sabayon/images/silent-1920x1080.jpg
+pic=/etc/splash/sabayon/images/verbose-1920x1080.png
+silentpic=/etc/splash/sabayon/images/silent-1920x1080.png
 
 # progress bar
 box silent noover          1 1040 1919 1045 #000000
