[releases/8] exclude .gitignore from tarball

--- a/releases/8/sabayon-artwork-core/Makefile
+++ b/releases/8/sabayon-artwork-core/Makefile
@@ -14,7 +14,8 @@ scripts:
 cook:
 	tar -cJf $(TARBALL_NAME) \
 		../$(DIR_NAME) --exclude Makefile \
-		--exclude $(TARBALL_NAME)
+		--exclude $(TARBALL_NAME) \
+		--exclude .gitignore
 
 clean:
 	rm -f $(TARBALL_NAME)
