[releases/8] add sabayon-artwork-lxde dir

--- a/releases/8/Makefile
+++ b/releases/8/Makefile
@@ -1,4 +1,4 @@
-SUBDIRS=sabayon-artwork-core sabayon-artwork-kde sabayon-artwork-gnome sabayon-artwork-extra sabayon-artwork-loo
+SUBDIRS=sabayon-artwork-core sabayon-artwork-kde sabayon-artwork-gnome sabayon-artwork-extra sabayon-artwork-loo sabayon-artwork-lxde
 
 include make.include
 
